# CleanDesk

./: .gitignore  README.md  cleandesk.spec  cleandesk_launcher.py  pyproject.toml
AI_Reference/: CleanDesk_项目总览_Python版.docx  Step0 Guide.md
cleandesk/: __init__.py  autostart.py  config.py  engine.py  logger.py  main.py  mover.py  notifier.py  tray.py  watcher.py
cleandesk/resources/: default_rules.json
cleandesk/tests/: test_config.py  test_engine.py
installer/: cleandesk.nsi
scripts/: build.ps1
